CA-468: fix for team roster grid alignment.

--- a/src/sass/layout/_section.scss
+++ b/src/sass/layout/_section.scss
@@ -234,7 +234,7 @@
 .section__teaser-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: left;
 
   .teaser-grid--wrapper {
     width: 100%;
@@ -247,6 +247,10 @@
     }
     @media screen and (min-width: $medium-large-screen) {
       width: 15%;
+    }
+
+    .teaser-grid {
+      margin: 0 0.8%;
     }
   }
 }
